--- a/home-1.html
+++ b/home-1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,182 @@
     <link rel="stylesheet" href="css/fontYekanBakh.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    
+
+<body style="height: 7000px;">
+    <header>
+        <!-- topbar -->
+        <div class="topbar bg-green">
+            <div class="d-flex p-3 justify-content-between align-items-center">
+                <div>
+                    <span class="">شماره تماس:</span>
+
+                    <span dir="ltr" class="fw-600 fs17 fw-700"> +084 123 - 456 88</span>
+                </div>
+                <div>
+                    <a href="" class="text-dark">
+                        <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="22"
+                            width="22" xmlns="http://www.w3.org/2000/svg">
+                            <g id="Credit_Card_1">
+                                <g>
+                                    <path
+                                        d="M19.44,5.14H4.56a2.5,2.5,0,0,0-2.5,2.5v8.72a2.5,2.5,0,0,0,2.5,2.5H19.44a2.5,2.5,0,0,0,2.5-2.5V7.64A2.5,2.5,0,0,0,19.44,5.14ZM3.06,7.64a1.5,1.5,0,0,1,1.5-1.5H19.44a1.5,1.5,0,0,1,1.5,1.5v.5H3.06Zm17.88,8.72a1.5,1.5,0,0,1-1.5,1.5H4.56a1.5,1.5,0,0,1-1.5-1.5V9.64H20.94Z">
+                                    </path>
+                                    <path d="M8.063,14.247h-3a.5.5,0,1,1,0-1h3a.5.5,0,1,1,0,1Z"></path>
+                                    <path d="M18.934,14.25h-6.5a.5.5,0,1,1,0-1h6.5a.5.5,0,0,1,0,1Z"></path>
+                                </g>
+                            </g>
+                        </svg>
+                        <span class="fs15 fw-600">پرداخت های تایید شده</span>
+                    </a>
+                </div>
+                <div class="">
+                    <img src="images/en.jpg" width="20" height="20" class="rounded-circle object-fit-cover" alt="">
+                    <span class="fs15 me-1">فارسی</span>
+                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="16"
+                        width="16" xmlns="http://www.w3.org/2000/svg">
+                        <path fill="none" d="M0 0h24v24H0V0z"></path>
+                        <path d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"></path>
+                    </svg>
+                </div>
+            </div>
+        </div>
+        <!-- menu -->
+        <div class="menu d-flex align-items-center justify-content-between bg-white px-4">
+            <!-- first box -->
+            <div class="logo-box">
+                <img src="images/logo.svg" width="" alt="">
+            </div>
+            <!-- second box -->
+            <div class="d-flex align-items-center">
+                <ul class="p-0 m-0">
+                    <li>
+                        <a href="">
+                            خانه
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24"
+                                height="15" width="15" xmlns="http://www.w3.org/2000/svg">
+                                <path fill="none" d="M0 0h24v24H0V0z"></path>
+                                <path d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"></path>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            فروشگاه
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24"
+                                height="15" width="15" xmlns="http://www.w3.org/2000/svg">
+                                <path fill="none" d="M0 0h24v24H0V0z"></path>
+                                <path d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"></path>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            بلاگ
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24"
+                                height="15" width="15" xmlns="http://www.w3.org/2000/svg">
+                                <path fill="none" d="M0 0h24v24H0V0z"></path>
+                                <path d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"></path>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            صفحات
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24"
+                                height="15" width="15" xmlns="http://www.w3.org/2000/svg">
+                                <path fill="none" d="M0 0h24v24H0V0z"></path>
+                                <path d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"></path>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            ارتباط با ما
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24"
+                                height="15" width="15" xmlns="http://www.w3.org/2000/svg">
+                                <path fill="none" d="M0 0h24v24H0V0z"></path>
+                                <path d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"></path>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <!-- thid box -->
+            <div class="d-flex align-items-center position-relative ">
+                <div class="border-start ps-3 d-flex align-items-center">
+                    <input type="text" class="menu-search-inp border-0 fs14 px-4"
+                        placeholder="جستجو تو از اینجا شروع کن...">
+                    <svg class="" stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24"
+                        stroke-linecap="round" stroke-linejoin="round" height="20" width="20"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="11" cy="11" r="8"></circle>
+                        <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                    </svg>
+                </div>
+
+                <svg class="me-3" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 256 256"
+                    height="26" width="26" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M229.19,213c-15.81-27.32-40.63-46.49-69.47-54.62a70,70,0,1,0-63.44,0C67.44,166.5,42.62,185.67,26.81,213a6,6,0,1,0,10.38,6C56.4,185.81,90.34,166,128,166s71.6,19.81,90.81,53a6,6,0,1,0,10.38-6ZM70,96a58,58,0,1,1,58,58A58.07,58.07,0,0,1,70,96Z">
+                    </path>
+                </svg>
+                <svg class="me-3" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512"
+                    height="26" width="26" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M349.6 64c-36.4 0-70.7 16.7-93.6 43.9C233.1 80.7 198.8 64 162.4 64 97.9 64 48 114.2 48 179.1c0 79.5 70.7 143.3 177.8 241.7L256 448l30.2-27.2C393.3 322.4 464 258.6 464 179.1 464 114.2 414.1 64 349.6 64zm-80.8 329.3l-4.2 3.9-8.6 7.8-8.6-7.8-4.2-3.9c-50.4-46.3-94-86.3-122.7-122-28-34.7-40.4-63.1-40.4-92.2 0-22.9 8.4-43.9 23.7-59.3 15.2-15.4 36-23.8 58.6-23.8 26.1 0 52 12.2 69.1 32.5l24.5 29.1 24.5-29.1c17.1-20.4 43-32.5 69.1-32.5 22.6 0 43.4 8.4 58.7 23.8 15.3 15.4 23.7 36.5 23.7 59.3 0 29-12.5 57.5-40.4 92.2-28.8 35.7-72.3 75.7-122.8 122z">
+                    </path>
+                </svg>
+
+
+                <div class="shop-circle rounded-circle bg-green me-3">
+                    <svg stroke="currentColor" fill="none" stroke-width="1.5" viewBox="0 0 24 24" aria-hidden="true"
+                        height="25" width="25" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M15.75 10.5V6a3.75 3.75 0 1 0-7.5 0v4.5m11.356-1.993 1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 0 1-1.12-1.243l1.264-12A1.125 1.125 0 0 1 5.513 7.5h12.974c.576 0 1.059.435 1.119 1.007ZM8.625 10.5a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm7.5 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z">
+                        </path>
+                    </svg>
+                </div>
+
+            </div>
+        </div>
+    </header>
+
+    <div class="max-width-container mx-auto slider">
+        <div class="slider-1 br-20">
+            <div class="h-100 d-flex align-items-center justify-content-between position-relative">
+                <img src="images/slider/revslider_shape.png" class="position-absolute left-img-slider" alt="">
+                <div class="pe-4">
+                    <div class="text-white fw-600">
+                        بهترین مکمل های موضعی
+                    </div>
+                    <h1 class="fw-800 text-white main-txt">
+                        بهترین شریک‌
+                        <br>
+                            در مسیر ...
+                        <br>
+                        <span class="red">
+                            تناسب‌اندام
+                        </span>
+
+                    </h1>
+                    <div class="text-white fw-600 fs20">
+                        افزایش دهنده حجم عضلانی هاردکور، مناسب برای بدنسازان
+                    </div>
+
+                    <div class="mt-4">
+                        <button class="border-0 fs17 bg-white shop-btn fw-600">
+                         فروشگاه
+                        </button>
+                    </div>
+                </div>
+                <div>
+                    <img src="images/slider/revslider_product-2.png" width="95%" class="slider-img" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
 </html>
