--- a/home-1.html
+++ b/home-1.html
@@ -150,6 +150,7 @@
         </div>
     </header>
 
+    <!-- slider -->
     <div class="max-width-container mx-auto slider">
         <div class="slider-1 br-20">
             <div class="h-100 d-flex align-items-center justify-content-between position-relative">
@@ -158,10 +159,10 @@
                     <div class="text-white fw-600">
                         بهترین مکمل های موضعی
                     </div>
-                    <h1 class="fw-800 text-white main-txt">
+                    <h1 class="fw-800 text-white large-txt mt-2">
                         بهترین شریک‌
                         <br>
-                            در مسیر ...
+                        در مسیر ...
                         <br>
                         <span class="red">
                             تناسب‌اندام
@@ -174,7 +175,7 @@
 
                     <div class="mt-4">
                         <button class="border-0 fs17 bg-white shop-btn fw-600">
-                         فروشگاه
+                            فروشگاه
                         </button>
                     </div>
                 </div>
@@ -182,6 +183,66 @@
                     <img src="images/slider/revslider_product-2.png" width="95%" class="slider-img" alt="">
                 </div>
             </div>
+        </div>
+    </div>
+
+
+    <!-- banners -->
+    <div class="max-width-container mx-auto mt-4 pt-2">
+        <div class="row">
+            <div class="col-6 ">
+                <div class="position-relative banner-img banner-img-2">
+                    <div class="d-flex flex-column h-100 pb-5">
+                        <div>
+                            <div class="banner-badge mt-5 text-white fs14 me-4">
+                                یکی بخر، یکی رایگان بگیر
+                            </div>
+                            <div class="text-white fw-800 large-txt-2  pe-4 mt-2">
+
+                                <div>
+                                    تقــــویت
+                                </div>
+
+                                <div class="mt--15px">
+                                    انرژی بدن
+                                </div>
+                            </div>
+                            <div class="text-white pe-4 fw-600 fs22">
+                                با ما عنوان سایت اندام رویاهات رو بساز
+                            </div>
+                        </div>
+                        <div class="mt-auto pe-4">
+                            <button class="banner-btn bg-transparent text-white fw-600 shop-btn">خرید کالا</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-6 ">
+                <div class="position-relative banner-img ">
+                    <div class="d-flex flex-column h-100 pb-5 ">
+                        <div>
+                            <div class="banner-badge mt-5 text-white fs14 me-4">
+                                یکی بخر، یکی رایگان بگیر
+                            </div>
+                            <div class="text-white fw-800 large-txt-2  pe-4 mt-2">
+                                <div>
+                                    20%
+                                    تخفیف
+                                </div>
+                            </div>
+                            <div class="text-white pe-4 fw-600 fs22">
+                                بر روی تمام محصولات موجود در سایت
+                            </div>
+                        </div>
+                        <div class="mt-auto pe-4">
+                            <button class="banner-btn bg-transparent text-white fw-600 shop-btn">خرید کالا</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
         </div>
     </div>
 
