--- a/home-1.html
+++ b/home-1.html
@@ -190,9 +190,11 @@
     <!-- banners -->
     <div class="max-width-container mx-auto mt-4 pt-2">
         <div class="row">
-            <div class="col-6 ">
-                <div class="position-relative banner-img banner-img-2">
-                    <div class="d-flex flex-column h-100 pb-5">
+            <div class="col-6">
+                <div class="position-relative img-hover">
+                    <img src="images/slider/h1_bn-2.jpg" class="banner-img w-100 " alt="">
+
+                    <div class="d-flex flex-column h-100 pb-5 position-absolute w-100">
                         <div>
                             <div class="banner-badge mt-5 text-white fs14 me-4">
                                 یکی بخر، یکی رایگان بگیر
@@ -218,21 +220,27 @@
 
                 </div>
             </div>
-            <div class="col-6 ">
-                <div class="position-relative banner-img ">
-                    <div class="d-flex flex-column h-100 pb-5 ">
+            <div class="col-6">
+                <div class="position-relative img-hover">
+                    <img src="images/slider/h1_bn-1.jpg" class="banner-img w-100" alt="">
+
+                    <div class="d-flex flex-column h-100 pb-5 position-absolute w-100">
                         <div>
                             <div class="banner-badge mt-5 text-white fs14 me-4">
                                 یکی بخر، یکی رایگان بگیر
                             </div>
                             <div class="text-white fw-800 large-txt-2  pe-4 mt-2">
+
                                 <div>
-                                    20%
-                                    تخفیف
+                                    تقــــویت
+                                </div>
+
+                                <div class="mt--15px">
+                                    انرژی بدن
                                 </div>
                             </div>
                             <div class="text-white pe-4 fw-600 fs22">
-                                بر روی تمام محصولات موجود در سایت
+                                با ما عنوان سایت اندام رویاهات رو بساز
                             </div>
                         </div>
                         <div class="mt-auto pe-4">
@@ -242,10 +250,99 @@
 
                 </div>
             </div>
-
         </div>
     </div>
 
+    <!-- category -->
+    <div class="max-width-container mx-auto mt-5 first-title fw-800 pt-4">
+        <div class="">
+            <span class="first-part">
+                هدفمند
+            </span>
+            خرید کن
+        </div>
+    </div>
+
+    <div class="max-width-container mx-auto mt-4 pt-2">
+        <div class="row">
+
+            <div class="col-2">
+                <div class="ps-3">
+                    <img src="images/slider/h1_recovery.jpg" class="w-100 category-img object-fit-cover br-20" alt="">
+                </div>
+                <div class="fw-800 fs25 text-center mt-3">
+                    ریکاوری
+                </div>
+                <div class="fs14 menu-search-inp text-center mt-1">
+                    ریکاوری عضلات خود را تقویت کنید.
+                </div>
+                <button class="mt-3 w-100 cat-btn">خرید کنید</button>
+            </div>
+            <div class="col-2">
+                <div class="ps-3">
+                    <img src="images/slider/h1_build-muscle.jpg" class="w-100 category-img object-fit-cover br-20"
+                        alt="">
+                </div>
+                <div class="fw-800 fs25 text-center mt-3">
+                    ریکاوری
+                </div>
+                <div class="fs14 menu-search-inp text-center mt-1">
+                    ریکاوری عضلات خود را تقویت کنید.
+                </div>
+                <button class="mt-3 w-100 cat-btn">خرید کنید</button>
+            </div>
+            <div class="col-2">
+                <div class="ps-3">
+                    <img src="images/slider/h1_strength.jpg" class="w-100 category-img object-fit-cover br-20" alt="">
+                </div>
+                <div class="fw-800 fs25 text-center mt-3">
+                    ریکاوری
+                </div>
+                <div class="fs14 menu-search-inp text-center mt-1">
+                    ریکاوری عضلات خود را تقویت کنید.
+                </div>
+                <button class="mt-3 w-100 cat-btn">خرید کنید</button>
+            </div>
+            <div class="col-2">
+                <div class="ps-3">
+                    <img src="images/slider/h1_lose-weight.jpg" class="w-100 category-img object-fit-cover br-20"
+                        alt="">
+                </div>
+                <div class="fw-800 fs25 text-center mt-3">
+                    ریکاوری
+                </div>
+                <div class="fs14 menu-search-inp text-center mt-1">
+                    ریکاوری عضلات خود را تقویت کنید.
+                </div>
+                <button class="mt-3 w-100 cat-btn">خرید کنید</button>
+            </div>
+            <div class="col-2">
+                <div class="">
+                    <img src="images/slider/h1_gain-mass.jpg" class="w-100 category-img object-fit-cover br-20" alt="">
+                </div>
+                <div class="fw-800 fs25 text-center mt-3">
+                    ریکاوری
+                </div>
+                <div class="fs14 menu-search-inp text-center mt-1">
+                    ریکاوری عضلات خود را تقویت کنید.
+                </div>
+                <button class="mt-3 w-100 cat-btn">خرید کنید</button>
+            </div>
+            <div class="col-2">
+                <div class="ps-3">
+                    <img src="images/slider/h1_lean-muscle.jpg" class="w-100 category-img object-fit-cover br-20"
+                        alt="">
+                </div>
+                <div class="fw-800 fs25 text-center mt-3">
+                    ریکاوری
+                </div>
+                <div class="fs14 menu-search-inp text-center mt-1">
+                    ریکاوری عضلات خود را تقویت کنید.
+                </div>
+                <button class="mt-3 w-100 cat-btn">خرید کنید</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
