add intro section

--- a/home-1.html
+++ b/home-1.html
@@ -1087,6 +1087,53 @@
             </div>
         </div>
     </div>
+
+    <!-- intro -->
+    <div class="back-color-co">
+        <div class="max-width-container mx-auto mt-5 py-6">
+            <div class="row align-items-center">
+                <div class="col-6">
+                    <div class="fw-600">
+                        مورد اعتماد از سال 1390
+                    </div>
+                    <div class="fw-600 fw-800">
+                        <div class="c-sec-color intro-txt">
+                            <div>
+                                محصولات باکیفیت
+                            </div>
+
+                            <div>
+                                خدمات قابل اعتماد
+                            </div>
+                        </div>
+                        <div class="intro-txt">
+                            <div>
+                                پشتیبانی سریع
+                            </div>
+
+                            <div>
+                                تجربه‌ای استثنایی ...
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="fs20 lh-2 c-sec-2-color ps-5">
+                        به مدت 20 سال، ما با ارائه مکمل‌های غذایی و تغذیه‌ای با کیفیت بالا، همراه با توجه شخصی بی‌نظیر،
+                        به
+                        افرادی مانند شما در دستیابی به اهداف مختلف سلامتی و تناسب اندام کمک کرده‌ایم.
+                    </div>
+                    <div class="mt-4">
+                        <button class="fs17 bg-white shop-btn fw-600 border bg-transparent">شروع کنید</button>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <img src="images/slider/h1_img-1.jpg" class="w-75 br-20 intro-img object-fit-cover" alt=""> <img
+                        src="" alt="">
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 
