--- a/home-1.html
+++ b/home-1.html
@@ -2929,6 +2929,29 @@
         </div>
         <img src="images/slider/custom-bottom.svg" class="w-100 position-absolute bottom-0" alt="">
     </div>
+
+
+    <!-- brands -->
+    <div class="max-width-container mx-auto mt-5 pt-4">
+        <div class="swiper brand_s">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide text-center"> <img src="images/slider/b-1.svg" alt=""></div>
+                <div class="swiper-slide text-center"> <img src="images/slider/b-1.svg" alt=""></div>
+                <div class="swiper-slide text-center"> <img src="images/slider/b-2.svg" alt=""></div>
+                <div class="swiper-slide text-center"> <img src="images/slider/b-3.svg" alt=""></div>
+                <div class="swiper-slide text-center"> <img src="images/slider/b-3.svg" alt=""></div>
+                <div class="swiper-slide text-center"> <img src="images/slider/b-4.svg" alt=""></div>
+                <div class="swiper-slide text-center"> <img src="images/slider/b-4.svg" alt=""></div>
+                <div class="swiper-slide text-center"> <img src="images/slider/b-4.svg" alt=""></div>
+            </div>
+        </div>
+
+    </div>
+
+    
+    <div>
+
+    </div>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
