--- a/home-1.html
+++ b/home-1.html
@@ -2947,11 +2947,168 @@
         </div>
 
     </div>
-
-    
-    <div>
-
+    <div class="max-width-container mx-auto my-5 py-5">
+        <div class="row border-line mt-4"></div>
     </div>
+
+    <!-- blogs -->
+    <div class="max-width-container mx-auto mt-5 first-title fw-800 pt-4">
+        <div class="">
+            <span class="first-part"> مقالات و</span>
+            مشاوره
+        </div>
+    </div>
+
+    <div class="max-width-container mx-auto mt-5">
+        <div class="row">
+            <div class="swiper blog_s">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="">
+                            <div class="position-relative">
+                                <div class="position-absolute cat-blog-box bg-white fs13 fw-600">
+                                    عنوان دسته بندی
+                                </div>
+                                <img src="images/blogs/s.jpg" class="w-100 object-fit-cover br-20" alt="">
+                            </div>
+                            <div class="fw-800 fs25 mt-4 ps-5">
+
+                                سوپرفودها به شکل مکمل: آیا ارزشش را دارند؟
+                                بهترین روش برای جایگذینی چیت؟
+                            </div>
+                            <div class="c-sec-2-color lh-2 fs15 mt-2">
+                                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک
+                                است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط
+
+                                دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار
+                                گیرد.
+                            </div>
+                            <div class="read-more-btn mt-2">
+                                <a href="" class="text-dark fw-700">
+                                    بیشتر بخوانید
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+ <div class="swiper-slide">
+                        <div class="">
+                            <div class="position-relative">
+                                <div class="position-absolute cat-blog-box bg-white fs13 fw-600">
+                                    عنوان دسته بندی
+                                </div>
+                                <img src="images/blogs/s.jpg" class="w-100 object-fit-cover br-20" alt="">
+                            </div>
+                            <div class="fw-800 fs25 mt-4 ps-5">
+
+                                سوپرفودها به شکل مکمل: آیا ارزشش را دارند؟
+                                بهترین روش برای جایگذینی چیت؟
+                            </div>
+                            <div class="c-sec-2-color lh-2 fs15 mt-2">
+                                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک
+                                است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط
+
+                                دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار
+                                گیرد.
+                            </div>
+                            <div class="read-more-btn mt-2">
+                                <a href="" class="text-dark fw-700">
+                                    بیشتر بخوانید
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+ <div class="swiper-slide">
+                        <div class="">
+                            <div class="position-relative">
+                                <div class="position-absolute cat-blog-box bg-white fs13 fw-600">
+                                    عنوان دسته بندی
+                                </div>
+                                <img src="images/blogs/s.jpg" class="w-100 object-fit-cover br-20" alt="">
+                            </div>
+                            <div class="fw-800 fs25 mt-4 ps-5">
+
+                                سوپرفودها به شکل مکمل: آیا ارزشش را دارند؟
+                                بهترین روش برای جایگذینی چیت؟
+                            </div>
+                            <div class="c-sec-2-color lh-2 fs15 mt-2">
+                                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک
+                                است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط
+
+                                دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار
+                                گیرد.
+                            </div>
+                            <div class="read-more-btn mt-2">
+                                <a href="" class="text-dark fw-700">
+                                    بیشتر بخوانید
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+ <div class="swiper-slide">
+                        <div class="">
+                            <div class="position-relative">
+                                <div class="position-absolute cat-blog-box bg-white fs13 fw-600">
+                                    عنوان دسته بندی
+                                </div>
+                                <img src="images/blogs/s.jpg" class="w-100 object-fit-cover br-20" alt="">
+                            </div>
+                            <div class="fw-800 fs25 mt-4 ps-5">
+
+                                سوپرفودها به شکل مکمل: آیا ارزشش را دارند؟
+                                بهترین روش برای جایگذینی چیت؟
+                            </div>
+                            <div class="c-sec-2-color lh-2 fs15 mt-2">
+                                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک
+                                است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط
+
+                                دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار
+                                گیرد.
+                            </div>
+                            <div class="read-more-btn mt-2">
+                                <a href="" class="text-dark fw-700">
+                                    بیشتر بخوانید
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+ <div class="swiper-slide">
+                        <div class="">
+                            <div class="position-relative">
+                                <div class="position-absolute cat-blog-box bg-white fs13 fw-600">
+                                    عنوان دسته بندی
+                                </div>
+                                <img src="images/blogs/s.jpg" class="w-100 object-fit-cover br-20" alt="">
+                            </div>
+                            <div class="fw-800 fs25 mt-4 ps-5">
+
+                                سوپرفودها به شکل مکمل: آیا ارزشش را دارند؟
+                                بهترین روش برای جایگذینی چیت؟
+                            </div>
+                            <div class="c-sec-2-color lh-2 fs15 mt-2">
+                                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک
+                                است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط
+
+                                دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار
+                                گیرد.
+                            </div>
+                            <div class="read-more-btn mt-2">
+                                <a href="" class="text-dark fw-700">
+                                    بیشتر بخوانید
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
