--- a/home-1.html
+++ b/home-1.html
@@ -2958,7 +2958,6 @@
             مشاوره
         </div>
     </div>
-
     <div class="max-width-container mx-auto mt-5">
         <div class="row">
             <div class="swiper blog_s">
@@ -2991,7 +2990,7 @@
                         </div>
                     </div>
 
- <div class="swiper-slide">
+                    <div class="swiper-slide">
                         <div class="">
                             <div class="position-relative">
                                 <div class="position-absolute cat-blog-box bg-white fs13 fw-600">
@@ -3019,7 +3018,7 @@
                         </div>
                     </div>
 
- <div class="swiper-slide">
+                    <div class="swiper-slide">
                         <div class="">
                             <div class="position-relative">
                                 <div class="position-absolute cat-blog-box bg-white fs13 fw-600">
@@ -3047,7 +3046,7 @@
                         </div>
                     </div>
 
- <div class="swiper-slide">
+                    <div class="swiper-slide">
                         <div class="">
                             <div class="position-relative">
                                 <div class="position-absolute cat-blog-box bg-white fs13 fw-600">
@@ -3075,7 +3074,7 @@
                         </div>
                     </div>
 
- <div class="swiper-slide">
+                    <div class="swiper-slide">
                         <div class="">
                             <div class="position-relative">
                                 <div class="position-absolute cat-blog-box bg-white fs13 fw-600">
@@ -3109,6 +3108,56 @@
         </div>
     </div>
 
+
+    <!-- parts -->
+    <div class="max-width-container mx-auto mt-5 pt-5">
+        <div class="swiper gallery_s">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="img-hover-2">
+                        <img src="images/blogs/gallery-1.jpg" alt="">
+                        <div class="hover-icon">+</div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="img-hover-2">
+                        <img src="images/blogs/gallery-1.jpg" alt="">
+                        <div class="hover-icon">+</div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="img-hover-2">
+                        <img src="images/blogs/gallery-1.jpg" alt="">
+                        <div class="hover-icon">+</div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="img-hover-2">
+                        <img src="images/blogs/gallery-1.jpg" alt="">
+                        <div class="hover-icon">+</div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="img-hover-2">
+                        <img src="images/blogs/gallery-1.jpg" alt="">
+                        <div class="hover-icon">+</div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="img-hover-2">
+                        <img src="images/blogs/gallery-1.jpg" alt="">
+                        <div class="hover-icon">+</div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="img-hover-2">
+                        <img src="images/blogs/gallery-1.jpg" alt="">
+                        <div class="hover-icon">+</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
