--- a/home-1.html
+++ b/home-1.html
@@ -15,7 +15,6 @@
 <body>
 
     <header>
-
         <!-- topbar -->
         <div class="topbar bg-green">
             <div class="d-flex p-3 justify-content-between align-items-center">
@@ -27,16 +26,88 @@
                 <div class="w-50" dir="ltr">
                     <div class="ticker">
                         <div class="ticker__wrap">
-                            <div class="ticker__item">خبر شماره ۱ - این یک متن تستی است</div>
-                            <div class="ticker__item">خبر شماره ۲ - متن بعدی بدون فاصله میاد</div>
-                            <div class="ticker__item">خبر شماره ۳ - همینطوری ادامه پیدا میکنه</div>
-                            <div class="ticker__item">خبر شماره ۴ - زیرنویس طور شبکه خبر</div>
+                            <div class="ticker__item">
+
+                                <span class="fs15 fw-600 me-1">
+                                    هدیه رایگان وقتی بالای ۱۵۰ دلار خرج می‌کنید
+                                </span>
+                                <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24"
+                                    stroke-linecap="round" stroke-linejoin="round" height="23" width="23"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <rect x="3" y="8" width="18" height="4" rx="1"></rect>
+                                    <path d="M12 8v13"></path>
+                                    <path d="M19 12v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7"></path>
+                                    <path
+                                        d="M7.5 8a2.5 2.5 0 0 1 0-5A4.8 8 0 0 1 12 8a4.8 8 0 0 1 4.5-5 2.5 2.5 0 0 1 0 5">
+                                    </path>
+                                </svg>
+
+                            </div>
+                            <div class="ticker__item">
+                                <span class="fs15 fw-600 me-1">رایگان برای حمل و نقل بالای 100 هزار تومان</span>
+                                <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24"
+                                    stroke-linecap="round" stroke-linejoin="round" height="25" width="25"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M7 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
+                                    <path d="M17 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
+                                    <path d="M5 17h-2v-4m-1 -8h11v12m-4 0h6m4 0h2v-6h-8m0 -5h5l3 5"></path>
+                                    <path d="M3 9l4 0"></path>
+                                </svg>
+
+
+                            </div>
+                            <div class="ticker__item">
+                                <span class="fs15 fw-600 me-1">تضمین امنیت پرداخت با ما</span>
+                                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 576 512"
+                                    height="20" width="20" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M512 80c8.8 0 16 7.2 16 16l0 32L48 128l0-32c0-8.8 7.2-16 16-16l448 0zm16 144l0 192c0 8.8-7.2 16-16 16L64 432c-8.8 0-16-7.2-16-16l0-192 480 0zM64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l448 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32zm56 304c-13.3 0-24 10.7-24 24s10.7 24 24 24l48 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-48 0zm128 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l112 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-112 0z">
+                                    </path>
+                                </svg>
+
+                            </div>
 
                             <!-- تکرار دوباره برای لوپ بی‌وقفه -->
-                            <div class="ticker__item">خبر شماره ۱ - این یک متن تستی است</div>
-                            <div class="ticker__item">خبر شماره ۲ - متن بعدی بدون فاصله میاد</div>
-                            <div class="ticker__item">خبر شماره ۳ - همینطوری ادامه پیدا میکنه</div>
-                            <div class="ticker__item">خبر شماره ۴ - زیرنویس طور شبکه خبر</div>
+                            <div class="ticker__item">
+
+                                <span class="fs15 fw-600 me-1">
+                                    هدیه رایگان وقتی بالای ۱۵۰ دلار خرج می‌کنید
+                                </span>
+                                <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24"
+                                    stroke-linecap="round" stroke-linejoin="round" height="23" width="23"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <rect x="3" y="8" width="18" height="4" rx="1"></rect>
+                                    <path d="M12 8v13"></path>
+                                    <path d="M19 12v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7"></path>
+                                    <path
+                                        d="M7.5 8a2.5 2.5 0 0 1 0-5A4.8 8 0 0 1 12 8a4.8 8 0 0 1 4.5-5 2.5 2.5 0 0 1 0 5">
+                                    </path>
+                                </svg>
+
+                            </div>
+                            <div class="ticker__item">
+                                <span class="fs15 fw-600 me-1">رایگان برای حمل و نقل بالای 100 هزار تومان</span>
+                                <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24"
+                                    stroke-linecap="round" stroke-linejoin="round" height="25" width="25"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M7 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
+                                    <path d="M17 17m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
+                                    <path d="M5 17h-2v-4m-1 -8h11v12m-4 0h6m4 0h2v-6h-8m0 -5h5l3 5"></path>
+                                    <path d="M3 9l4 0"></path>
+                                </svg>
+
+
+                            </div>
+                            <div class="ticker__item">
+                                <span class="fs15 fw-600 me-1">تضمین امنیت پرداخت با ما</span>
+                                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 576 512"
+                                    height="20" width="20" xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M512 80c8.8 0 16 7.2 16 16l0 32L48 128l0-32c0-8.8 7.2-16 16-16l448 0zm16 144l0 192c0 8.8-7.2 16-16 16L64 432c-8.8 0-16-7.2-16-16l0-192 480 0zM64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l448 0c35.3 0 64-28.7 64-64l0-320c0-35.3-28.7-64-64-64L64 32zm56 304c-13.3 0-24 10.7-24 24s10.7 24 24 24l48 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-48 0zm128 0c-13.3 0-24 10.7-24 24s10.7 24 24 24l112 0c13.3 0 24-10.7 24-24s-10.7-24-24-24l-112 0z">
+                                    </path>
+                                </svg>
+
+                            </div>
                         </div>
                     </div>
 
@@ -157,38 +228,128 @@
 
     <!-- slider -->
     <div class="max-width-container mx-auto slider">
-        <div class="slider-1 br-20">
-            <div class="h-100 d-flex align-items-center justify-content-between position-relative">
-                <img src="images/slider/revslider_shape.png" class="position-absolute left-img-slider" alt="">
-                <div class="pe-4">
-                    <div class="text-white fw-600">
-                        بهترین مکمل های موضعی
-                    </div>
-                    <h1 class="fw-800 text-white large-txt mt-2">
-                        بهترین شریک‌
-                        <br>
-                        در مسیر ...
-                        <br>
-                        <span class="red">
-                            تناسب‌اندام
-                        </span>
 
-                    </h1>
-                    <div class="text-white fw-600 fs20">
-                        افزایش دهنده حجم عضلانی هاردکور، مناسب برای بدنسازان
-                    </div>
+        <div class="swiper slider_swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="slider-2 br-20">
+                        <div class="h-100 d-flex align-items-center justify-content-between position-relative">
+                            <img src="images/slider/revslider_smoke.png" style="z-index: 0;"
+                                class="position-absolute w-100 bottom-0 br-20" alt="">
+                            <div class="pe-4 position-relative">
+                                <div class="text-white fw-600 ">
+                                    نسخه محدود
 
-                    <div class="mt-4">
-                        <button class="border-0 fs17 bg-white shop-btn fw-600">
-                            فروشگاه
-                        </button>
+
+                                </div>
+                                <h1 class="fw-800 text-white large-txt mt-2">
+                                    <span class="yellow">
+                                        تمرین قــوی 
+                                    </span>
+
+                                    <br>
+                                    در مسیر ...
+                                    <br>
+                                   
+
+                                </h1>
+                                <div class="text-white fw-600 fs20">
+                                    افزایش دهنده حجم عضلانی هاردکور، مناسب برای بدنسازان
+                                </div>
+
+                                <div class="mt-4">
+                                    <button class="border-0 fs17 bg-white shop-btn fw-600">
+                                        شروع خرید
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="text-start">
+                                <img src="images/slider/download.png" width="90%" class="slider-img" alt="">
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div>
-                    <img src="images/slider/revslider_product-2.png" width="95%" class="slider-img" alt="">
+                <div class="swiper-slide">
+                    <div class="slider-1 br-20">
+                        <div class="h-100 d-flex align-items-center justify-content-between position-relative">
+                            <img src="images/slider/revslider_shape.png" class="position-absolute left-img-slider"
+                                alt="">
+                            <div class="pe-4">
+                                <div class="text-white fw-600">
+                                    بهترین مکمل های موضعی
+                                </div>
+                                <h1 class="fw-800 text-white large-txt mt-2">
+                                    بهترین شریک‌
+                                    <br>
+                                    در مسیر ...
+                                    <br>
+                                    <span class="red">
+                                        تناسب‌اندام
+                                    </span>
+
+                                </h1>
+                                <div class="text-white fw-600 fs20">
+                                    افزایش دهنده حجم عضلانی هاردکور، مناسب برای بدنسازان
+                                </div>
+
+                                <div class="mt-4">
+                                    <button class="border-0 fs17 bg-white shop-btn fw-600">
+                                        شروع خرید
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="text-start">
+                                <img src="images/slider/revslider_product-2.png" width="90%" class="slider-img" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider-3 br-20">
+                        <div class="h-100 d-flex align-items-center justify-content-between position-relative">
+                            <!-- <img src="images/slider/revslider_smoke.png" style="z-index: 0;"
+                                class="position-absolute w-100 bottom-0 br-20" alt=""> -->
+                            <div class="pe-4 position-relative">
+                                <div class="text-white fw-600 ">
+                                    نسخه محدود
+
+
+                                </div>
+                                <h1 class="fw-800 text-white large-txt mt-2">
+                                    <span class="orange">
+                                        بهترین شریک‌
+                                    </span>
+
+                                    <br>
+                                    در مسیر
+                                    <br>
+                                    <span class="">
+                                        بدنی قوی ...
+                                    </span>
+
+                                </h1>
+                                <div class="text-white fw-600 fs20">
+                                    افزایش دهنده حجم عضلانی هاردکور، مناسب برای بدنسازان
+                                </div>
+
+                                <div class="mt-4">
+                                    <button class="border-0 fs17 bg-white shop-btn fw-600">
+                                        شروع خرید
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="text-start">
+                                <img src="images/slider/xsa.png" width="90%" class="slider-img" alt="">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <!-- اگر بخوای دکمه‌ها -->
+              <div class="swiper-pagination pb-4"></div>
+
         </div>
+
     </div>
 
 
