--- a/home-1.html
+++ b/home-1.html
@@ -421,12 +421,12 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="slider-2 br-20">
-                        <div class="h-100 d-flex align-items-center justify-content-between position-relative">
+                        <div class="h-100 d-block d-lg-flex align-items-center justify-content-between position-relative">
                             <img src="images/slider/revslider_smoke.png" style="z-index: 0;"
-                                class="position-absolute w-100 bottom-0 br-20" alt="">
-                            <div class="pe-4 position-relative">
+                                class="position-absolute w-100 bottom-0 br-20 h-100" alt="">
+                            <div class="pe-4 position-relative py-4 py-lg-0 text-center text-lg-end">
                                 <div class="text-white fw-600 ">
-                                    نسخه محدود
+                                     برترین برنامه های ایران
 
 
                                 </div>
@@ -451,23 +451,24 @@
                                     </button>
                                 </div>
                             </div>
-                            <div class="text-start">
-                                <img src="images/slider/download.png" width="90%" class="slider-img" alt="">
+                            <div class="text-lg-start text-center">
+                                <img src="images/slider/download.png" width="90%"  class="slider-img px-5 px-lg-0 mt-5 mt-lg-0" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slider-1 br-20">
-                        <div class="h-100 d-flex align-items-center justify-content-between position-relative">
+                        <div class="h-100 d-block d-lg-flex align-items-center justify-content-between position-relative">
                             <img src="images/slider/revslider_shape.png" class="position-absolute left-img-slider"
                                 alt="">
-                            <div class="pe-4">
+                            <div class="pe-4 position-relative py-4 py-lg-0 text-center text-lg-end">
                                 <div class="text-white fw-600">
                                     بهترین مکمل های موضعی
                                 </div>
                                 <h1 class="fw-800 text-white large-txt mt-2">
-                                    بهترین شریک‌
+                                    بهترین 
+                                    <span class="d-lg-none d-xl-inline">شریک‌</span>
                                     <br>
                                     در مسیر ...
                                     <br>
@@ -487,25 +488,25 @@
                                 </div>
                             </div>
                             <div class="text-start">
-                                <img src="images/slider/revslider_product-2.png" width="90%" class="slider-img" alt="">
+                                <img src="images/slider/revslider_product-2.png" width="90%" class="slider-img px-5 px-lg-0" alt="">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="swiper-slide">
                     <div class="slider-3 br-20">
-                        <div class="h-100 d-flex align-items-center justify-content-between position-relative">
-                            <!-- <img src="images/slider/revslider_smoke.png" style="z-index: 0;"
-                                class="position-absolute w-100 bottom-0 br-20" alt=""> -->
-                            <div class="pe-4 position-relative">
+                        <div class="h-100 d-block d-lg-flex align-items-center justify-content-between position-relative">
+                          
+                            <div class="pe-4 position-relative py-4 py-lg-0 text-center text-lg-end">
                                 <div class="text-white fw-600 ">
-                                    نسخه محدود
+                                    ارسال به سراسر ایران 
 
 
                                 </div>
                                 <h1 class="fw-800 text-white large-txt mt-2">
                                     <span class="orange">
-                                        بهترین شریک‌
+                                        بهترین 
+                                        <span class="d-lg-none d-xl-inline">شریک‌</span>
                                     </span>
 
                                     <br>
@@ -527,7 +528,7 @@
                                 </div>
                             </div>
                             <div class="text-start">
-                                <img src="images/slider/xsa.png" width="90%" class="slider-img" alt="">
+                                <img src="images/slider/xsa.png" width="90%" class="slider-img px-5 px-lg-0" alt="">
                             </div>
                         </div>
                     </div>
