--- a/blog-standard.html
+++ b/blog-standard.html
@@ -411,20 +411,22 @@
         </div>
 
     </header>
-    <div class="second-header max-width-container mx-auto br-20 d-flex justify-content-center align-items-center">
-        <div>
-            <h1 class="fw-800 tetx m-0">
-                مقالات
-            </h1>
-            <div class="d-flex align-items-center justify-content-center">
-                <div class="fs17 c-sec-color fw-600">
-                    خانه
-                </div>
-                <div class="fs20 fw-800 mx-2 c-sec-color">
-                    .
-                </div>
-                <div class="fs17 c-sec-color fw-600">
-                    بلاگ
+    <div class="px-3 px-lg-0">
+        <div class="second-header max-width-container mx-auto br-20 d-flex justify-content-center align-items-center">
+            <div>
+                <h1 class="fw-800 second-header-tetx m-0">
+                    مقالات
+                </h1>
+                <div class="d-flex align-items-center justify-content-center">
+                    <div class="fs17 c-sec-color fw-600">
+                        خانه
+                    </div>
+                    <div class="fs20 fw-800 mx-2 c-sec-color">
+                        .
+                    </div>
+                    <div class="fs17 c-sec-color fw-600">
+                        بلاگ
+                    </div>
                 </div>
             </div>
         </div>
@@ -432,9 +434,9 @@
 
 
     <!-- content -->
-    <div class="max-width-container mx-auto">
+    <div class="max-width-blog-container mx-auto">
         <div class="row">
-            <div class="col-8">
+            <div class="col-12 col-xl-8">
                 <div class="blog-card mt-5 pt-3">
                     <div class="position-relative">
                         <div class="position-absolute cat-blog-box bg-white fs13 fw-600">
@@ -442,12 +444,13 @@
                         </div>
                         <img src="images/blogs/blog_18-1060x600.jpg" class="w-100 br-20 object-fit-cover" alt="">
                     </div>
-                    <div class="fw-800 blog-txt mt-3 ps-5">
+                    <div class="fw-800 blog-txt mt-4 ps-5">
                         عنوان بلاگ :
                         آیا مکمل‌ها می‌توانند به کاهش وزن کمک کنند؟ علم چه می‌گوید؟
                     </div>
                     <div class="c-sec-2-color lh-2 mt-2">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است،
+                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک
+                        است،
                         زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی
                         اساسا مورد استفاده قرار گیرد.
                     </div>
@@ -457,19 +460,20 @@
                         </a>
                     </div>
                 </div>
-                <div class="blog-card mt-5 pt-3">
+                  <div class="blog-card mt-5 pt-3">
                     <div class="position-relative">
                         <div class="position-absolute cat-blog-box bg-white fs13 fw-600">
                             عنوان دسته بندی
                         </div>
                         <img src="images/blogs/blog_18-1060x600.jpg" class="w-100 br-20 object-fit-cover" alt="">
                     </div>
-                    <div class="fw-800 blog-txt mt-3 ps-5">
+                    <div class="fw-800 blog-txt mt-4 ps-5">
                         عنوان بلاگ :
                         آیا مکمل‌ها می‌توانند به کاهش وزن کمک کنند؟ علم چه می‌گوید؟
                     </div>
                     <div class="c-sec-2-color lh-2 mt-2">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است،
+                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک
+                        است،
                         زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی
                         اساسا مورد استفاده قرار گیرد.
                     </div>
@@ -479,19 +483,20 @@
                         </a>
                     </div>
                 </div>
-                <div class="blog-card mt-5 pt-3">
+                  <div class="blog-card mt-5 pt-3">
                     <div class="position-relative">
                         <div class="position-absolute cat-blog-box bg-white fs13 fw-600">
                             عنوان دسته بندی
                         </div>
                         <img src="images/blogs/blog_18-1060x600.jpg" class="w-100 br-20 object-fit-cover" alt="">
                     </div>
-                    <div class="fw-800 blog-txt mt-3 ps-5">
+                    <div class="fw-800 blog-txt mt-4 ps-5">
                         عنوان بلاگ :
                         آیا مکمل‌ها می‌توانند به کاهش وزن کمک کنند؟ علم چه می‌گوید؟
                     </div>
                     <div class="c-sec-2-color lh-2 mt-2">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است،
+                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک
+                        است،
                         زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی
                         اساسا مورد استفاده قرار گیرد.
                     </div>
@@ -501,10 +506,9 @@
                         </a>
                     </div>
                 </div>
-
             </div>
-            <div class="col-4 mt-5 pt-3">
-                <div class="border br-20 p-5">
+            <div class="col-4 d-none d-xl-block mt-5 pt-3 sticky-top-cu-blog">
+                <div class="border br-20 p-5 side-bar-scor-behavior">
                     <div class="position-relative">
                         <svg class="position-absolute search-ic" stroke="currentColor" fill="none" stroke-width="2"
                             viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" height="20" width="20"
@@ -640,49 +644,74 @@
 
                     <div class="mt-2">
                         <div class="border c-sec-2-color rounded tag-bo mt-1 ms-1 d-inline-block">
-                            انرژی
+                            <a href="" class="c-sec-2-color">
+                                انرژی
+                            </a>
                         </div>
                         <div class="border c-sec-2-color rounded tag-bo mt-1 ms-1 d-inline-block">
-                            فیتنس
+                            <a href="" class="c-sec-2-color">
+                                فیتنس
+                            </a>
                         </div>
                         <div class="border c-sec-2-color rounded tag-bo mt-1 ms-1 d-inline-block">
-                            قدرتمندی
+                            <a href="" class="c-sec-2-color">
+                                قدرتمندی
+                            </a>
+
                         </div>
                         <div class="border c-sec-2-color rounded tag-bo mt-1 ms-1 d-inline-block">
-                            ضعف
+                            <a href="" class="c-sec-2-color">
+                                ضعف
+                            </a>
                         </div>
                         <div class="border c-sec-2-color rounded tag-bo mt-1 ms-1 d-inline-block">
-                            انرژی
+                            <a href="" class="c-sec-2-color">
+                                انرژی
+                            </a>
                         </div>
                         <div class="border c-sec-2-color rounded tag-bo mt-1 ms-1 d-inline-block">
-                            فیتنس
+                            <a href="" class="c-sec-2-color">
+                                فیتنس
+                            </a>
                         </div>
                         <div class="border c-sec-2-color rounded tag-bo mt-1 ms-1 d-inline-block">
-                            قدرتمندی
+                            <a href="" class="c-sec-2-color">
+                                قدرتمندی
+                            </a>
+
                         </div>
                         <div class="border c-sec-2-color rounded tag-bo mt-1 ms-1 d-inline-block">
-                            ضعف
+                            <a href="" class="c-sec-2-color">
+                                ضعف
+                            </a>
                         </div>
+
                     </div>
 
                     <div class="row mt-4">
                         <div class="col-4 mt-3">
-                            <img src="images/blogs/blog-gallery-6-460x460.jpg" class="w-100 br-5 object-fit-cover" alt="">
+                            <img src="images/blogs/blog-gallery-6-460x460.jpg" class="w-100 br-5 object-fit-cover"
+                                alt="">
                         </div>
-                          <div class="col-4 mt-3">
-                            <img src="images/blogs/blog-gallery-6-460x460.jpg" class="w-100 br-5 object-fit-cover" alt="">
+                        <div class="col-4 mt-3">
+                            <img src="images/blogs/blog-gallery-6-460x460.jpg" class="w-100 br-5 object-fit-cover"
+                                alt="">
                         </div>
-                          <div class="col-4 mt-3">
-                            <img src="images/blogs/blog-gallery-6-460x460.jpg" class="w-100 br-5 object-fit-cover" alt="">
+                        <div class="col-4 mt-3">
+                            <img src="images/blogs/blog-gallery-6-460x460.jpg" class="w-100 br-5 object-fit-cover"
+                                alt="">
                         </div>
-                          <div class="col-4 mt-3">
-                            <img src="images/blogs/blog-gallery-6-460x460.jpg" class="w-100 br-5 object-fit-cover" alt="">
+                        <div class="col-4 mt-3">
+                            <img src="images/blogs/blog-gallery-6-460x460.jpg" class="w-100 br-5 object-fit-cover"
+                                alt="">
                         </div>
-                          <div class="col-4 mt-3">
-                            <img src="images/blogs/blog-gallery-6-460x460.jpg" class="w-100 br-5 object-fit-cover" alt="">
+                        <div class="col-4 mt-3">
+                            <img src="images/blogs/blog-gallery-6-460x460.jpg" class="w-100 br-5 object-fit-cover"
+                                alt="">
                         </div>
-                          <div class="col-4 mt-3">
-                            <img src="images/blogs/blog-gallery-6-460x460.jpg" class="w-100 br-5 object-fit-cover" alt="">
+                        <div class="col-4 mt-3">
+                            <img src="images/blogs/blog-gallery-6-460x460.jpg" class="w-100 br-5 object-fit-cover"
+                                alt="">
                         </div>
                     </div>
                 </div>
